--- a/examples/example1.html
+++ b/examples/example1.html
@@ -36,7 +36,7 @@
 
 			function init() {
 
-				camera = new THREE.PerspectiveCamera( 70, window.innerWidth / window.innerHeight, 1, 1000 );
+				camera = new THREE.PerspectiveCamera( 70, window.innerWidth / window.innerHeight, 100, 1000 );
 				camera.position.z = 400;
 
 				scene = new THREE.Scene();
@@ -47,7 +47,7 @@
 				var geometry = new THREE.BoxGeometry( 200, 200, 200 );
 				
 				var skyMaterial = new THREE.MeshBasicMaterial({
-					color: 0x000000
+					color: 0x3f5f3f
 				});
 
 				mesh = new THREE.Mesh( geometry, skyMaterial );
@@ -70,6 +70,9 @@
 
 				light = new THREE.PointLight(0x6fafff, 200000, 800);
 				light.position.set(100, -400, 100);
+				scene.add(light);
+
+				light = new THREE.AmbientLight(0x3f5f3f);
 				scene.add(light);
 
 				renderer = new Hyper.WebGLHyperRenderer({
