--- a/examples/materials.html
+++ b/examples/materials.html
@@ -31,9 +31,9 @@
 				// Load skybox texture
 				var texCubeRoot = "textures/park2";
 				var texCube = THREE.ImageUtils.loadTextureCube([
-					`${texCubeRoot}/posx.jpg`, `${texCubeRoot}/negx.jpg`,
-					`${texCubeRoot}/posy.jpg`, `${texCubeRoot}/negy.jpg`,
-					`${texCubeRoot}/posz.jpg`, `${texCubeRoot}/negz.jpg`
+					texCubeRoot + "/posx.jpg", texCubeRoot + "/negx.jpg",
+					texCubeRoot + "/posy.jpg", texCubeRoot + "/negy.jpg",
+					texCubeRoot + "/posz.jpg", texCubeRoot + "/negz.jpg"
 				])
 
 				// Add skybox object
