--- a/_examples/materials.html
+++ b/_examples/materials.html
@@ -143,7 +143,7 @@ layout: example
 		light.position.z = 130;
 		scene.add(light);
 
-		var light = new THREE.AmbientLight(0x7f7f7f);
+		var light = new THREE.AmbientLight(0x040804);
 		scene.add(light);
 
 		var probe = new Hyper.ReflectionProbe();
